agregue estilo al footer y habilite la seccion de formacion

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto-parrafo.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto-tiulo.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto.css">
+    <link rel="stylesheet" href="assets/css/formacion.css">
     <link rel="stylesheet" href="assets/css/contacto.css">
     <link rel="stylesheet" href="assets/css/contacto/contacto-titulo.css">
     <link rel="stylesheet" href="assets/css/contacto/contacto-icon.css">
@@ -83,6 +84,7 @@
     <link rel="stylesheet" href="assets/css/contacto/contacto-label.css">
     <link rel="stylesheet" href="assets/css/contacto/contacto-input.css">
     <link rel="stylesheet" href="assets/css/contacto/contacto-btn.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 <body class="body">
     <div class="container">
@@ -96,7 +98,7 @@
                     <a href="#skills" class="menu__link">Skills</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#experiencia" class="menu__link">Proyectos</a>
+                    <a href="#experiencia" class="menu__link">Experiencia</a>
                 </li>
                 <li  class="menu__item">
                     <a href="#formacion" class="menu__link">Formación</a>
@@ -359,8 +361,7 @@
                     </li> -->
                 </ul>
             </section>
-            <p>Aca falta contenido</p>
-            <!-- <section id="formacion" class="formacion">
+            <section id="formacion" class="formacion">
                 <h3 class="titulo-seccion">Formación IT</h3>
                 <ul>
                     <div class="fila-1">
@@ -416,7 +417,7 @@
                         </li>
                     </div>
                 </ul>
-            </section> -->
+            </section>
             <section id="contacto" class="contacto">
                 <div class="contacto__icon"></div>
                 <h3 class="contacto__titulo">Contacto</h3>
@@ -435,7 +436,24 @@
             </section>
         </main>
         <footer class="footer">
-            <p>&#169 Creado por Joel Dario Muñoz <time>2022</time></p>
+            <ul class="footer__lista">
+                <li class="menu__item">
+                    <a href="#presentacion" class="menu__link">Sobre mí</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#skills" class="menu__link">Skills</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#experiencia" class="menu__link">Experiencia</a>
+                </li>
+                <li  class="menu__item">
+                    <a href="#formacion" class="menu__link">Formación</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#contacto" class="menu__link">Contácto</a>
+                </li>
+            </ul>
+            <p>&#169 Copyrigth <em class="footer__nombre">Joel</em> Dario Muñoz | <time>2022</time></p>
         </footer>
     </div>
 </body>
