--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="assets/css/menu/menu-item.css">
     <link rel="stylesheet" href="assets/css/menu/menu-link.css">
     <link rel="stylesheet" href="assets/css/menu/menu-lista.css">
+    <link rel="stylesheet" href="assets/css/menu/menu-nav.css">
     <link rel="stylesheet" href="assets/css/menu/menu-nombre.css">
     <link rel="stylesheet" href="assets/css/presentacion.css">
-    <link rel="stylesheet" href="assets/css/presentacion/presentacion-imagen.css">
     <link rel="stylesheet" href="assets/css/presentacion/presentacion-box.css">
     <link rel="stylesheet" href="assets/css/presentacion/presentacion-central.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/box-contorno.css">
@@ -99,10 +99,11 @@
 <body class="body">
     <div class="container">
         <header class="menu">
-            <h1 class="menu__nombre">Joel</h1><nav>
+            <h1 class="menu__nombre">Joel</h1>
+            <nav class="menu__nav">
             <ul class="menu__lista">
                 <li class="menu__item">
-                    <a href="#presentacion" class="menu__link">Sobre mí</a>
+                    <a href="#presentacion" class="menu__link">Sobre</a>
                 </li>
                 <li class="menu__item">
                     <a href="#skills" class="menu__link">Skills</a>
@@ -113,37 +114,35 @@
                 <li  class="menu__item">
                     <a href="#formacion" class="menu__link">Formación</a>
                 </li>
-                <!-- <li class="menu__item">
+                <li class="menu__item">
                     <a href="#contacto" class="menu__link">Contácto</a>
-                </li> -->
+                </li>
             </ul>
             </nav>
         </header>
         <main>
             <section id="presentacion" class="presentacion">
-                <div class="presentacion__imagen">
-                    <div class="presentacion__box">
-                        <div class="presentacion__central">
-                            <div class="box__contorno-favicon">
-                                <div class="box__contorno"></div>
-                                <div class="box__favicon"></div>
-                            </div>
-                            <div class="box__contenido">
-                                <h2 class="contenido__nombre">Joel Muñoz</h2>
-                                <p class="contenido__oficio">develop full stack</p>
-                                <ul class="contenido__lista">
-                                    <li class="contenido__item">
-                                        <a href="https://www.linkedin.com/in/joel-dario-mu%C3%B1oz-68b173180/" class="contenido__link" target="_blank">
-                                            <div class="contenido__icon contenido__icon--linkedin"></div>
-                                        </a>
-                                    </li>
-                                    <li class="contenido__item">
-                                        <a href="https://github.com/jdario9912" class="contenido__link" target="_blank">
-                                            <div class="contenido__icon contenido__icon--github"></div>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
+                <div class="presentacion__box">
+                    <div class="presentacion__central">
+                        <div class="box__contorno-favicon">
+                            <div class="box__contorno"></div>
+                            <div class="box__favicon"></div>
+                        </div>
+                        <div class="box__contenido">
+                            <h2 class="contenido__nombre">Joel Muñoz</h2>
+                            <p class="contenido__oficio">develop full stack</p>
+                            <ul class="contenido__lista">
+                                <li class="contenido__item">
+                                    <a href="https://www.linkedin.com/in/joel-dario-mu%C3%B1oz-68b173180/" class="contenido__link" target="_blank">
+                                        <div class="contenido__icon contenido__icon--linkedin"></div>
+                                    </a>
+                                </li>
+                                <li class="contenido__item">
+                                    <a href="https://github.com/jdario9912" class="contenido__link" target="_blank">
+                                        <div class="contenido__icon contenido__icon--github"></div>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
