corregi CSS a toda la presentacion

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" href="assets/css/presentacion/presentacion-box.css">
     <link rel="stylesheet" href="assets/css/presentacion/presentacion-central.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/box-contorno.css">
-    <link rel="stylesheet" href="assets/css/presentacion/box/box-favicon.css">
+    <link rel="stylesheet" href="assets/css/presentacion/box/box-avatar.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/box-contenido.css">
-    <link rel="stylesheet" href="assets/css/presentacion/box/box-contorno-favicon.css">
+    <link rel="stylesheet" href="assets/css/presentacion/box/box-contorno-avatar.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-nombre.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-oficio.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-lista.css">
@@ -124,9 +124,9 @@
             <section id="presentacion" class="presentacion">
                 <div class="presentacion__box">
                     <div class="presentacion__central">
-                        <div class="box__contorno-favicon">
+                        <div class="box__contorno-avatar">
                             <div class="box__contorno"></div>
-                            <div class="box__favicon"></div>
+                            <div class="box__avatar"></div>
                         </div>
                         <div class="box__contenido">
                             <h2 class="contenido__nombre">Joel Muñoz</h2>
