elimine archivo contenido-link.css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-oficio.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-lista.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-item.css">
-    <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-link.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-icon.css">
     <link rel="stylesheet" href="assets/css/sobre-mi.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-btn-descargar.css">
@@ -133,12 +132,12 @@
                             <p class="contenido__oficio">develop full stack</p>
                             <ul class="contenido__lista">
                                 <li class="contenido__item">
-                                    <a href="https://www.linkedin.com/in/joel-dario-mu%C3%B1oz-68b173180/" class="contenido__link" target="_blank">
+                                    <a href="https://www.linkedin.com/in/joel-dario-mu%C3%B1oz-68b173180/" target="_blank">
                                         <div class="contenido__icon contenido__icon--linkedin"></div>
                                     </a>
                                 </li>
                                 <li class="contenido__item">
-                                    <a href="https://github.com/jdario9912" class="contenido__link" target="_blank">
+                                    <a href="https://github.com/jdario9912" target="_blank">
                                         <div class="contenido__icon contenido__icon--github"></div>
                                     </a>
                                 </li>
