--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-intereses.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-item.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-lista.css">
-    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-parrafo.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-tabla.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-td.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-texto.css">
@@ -157,13 +156,13 @@
                     <div class="sobre-mi__info-personal">
                         <h4 class="sobre-mi__titulo-info-personal">Información personal</h4>
                         <table class="sobre-mi__tabla">
-                            <tr class="sobre-mi__tr">
-                                <td class="sobre-mi__td sobre-mi__td--1">Teléfono</td>
-                                <td class="sobre-mi__td">2942-669351</td>
-                            </tr>
                             <tr>
                                 <td class="sobre-mi__td sobre-mi__td--1">e-mail</td>
                                 <td class="sobre-mi__td">joeldario9912@gmail.com</td>
+                            </tr>
+                            <tr class="sobre-mi__tr">
+                                <td class="sobre-mi__td sobre-mi__td--1">Teléfono</td>
+                                <td class="sobre-mi__td">2942-669351</td>
                             </tr>
                             <tr>
                                 <td class="sobre-mi__td sobre-mi__td--1">Dirección</td>
@@ -176,27 +175,30 @@
                         <ul class="sobre-mi__lista">
                             <li class="sobre-mi__item">
                                 <div class="sobre-mi__item--guitarra"></div>
-                                <h5>Tocar guitarra</h5>
+                                <h5>guitarra</h5>
                             </li>
                             <li class="sobre-mi__item">
                                 <div class="sobre-mi__item--auriculares"></div>
-                                <h5>Escuchar música</h5> 
+                                <h5>música</h5> 
                             </li>
                             <li class="sobre-mi__item">
                                 <div class="sobre-mi__item--ciclismo"></div>
-                                <h5>Andar en bici</h5>
+                                <h5>bici</h5>
                             </li>
                             <li class="sobre-mi__item">
                                 <div class="sobre-mi__item--leer"></div>
-                                <h5>Leer</h5>
+                                <h5>leer</h5>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <!-- <a href="#" class="sobre-mi__btn-descargar">
-                    <h4 class="sobre_mi__btn-texto">Descargar CV</h4>
-                    <div class="sobre-mi__icon-descargar"></div>
-                </a> -->
+                <a href="#" class="sobre-mi__btn-descargar">
+                    <h4 class="sobre_mi__btn-texto">
+                        Descargar CV
+                        <div class="sobre-mi__icon-descargar"></div>
+                    </h4>
+                
+                </a>
             </section>
             <section id="skills" class="skills">
                 <div class="skills__icon"></div>
